
2012-08-01  Carsten Haitzler (The Rasterman)

        * Provide share (Data) file for prefix finding and use
        eina_prefix for modules too so we work with debian multiarch


2012-08-02  Sung W. Park (sung_)

        * Fix evas_gl's internal resource surface bug. For optimzation evas_gl
        was using evas' window surface to do its resource creation and it 
        wans't properly updated when a window is destroyed and recreated.

2012-08-07  Cedric Bail

	* Properly warn when user try to link object from different canvas.

2012-08-13  Carsten Haitzler (The Rasterman)

	* Fix async fd stuff to generate new pipe after a fork (pid mismatch)

2012-08-14  Tom Hacohen (TAsn)

	* Textblock: Fixed range geometry when the last item is a format.

2012-08-17  Hermet (ChunEon Park)

	* Let clip the mapped obj even if it is a child of the mapped obj and do
  	it only when clipper exists

2012-08-20  Hermet (ChunEon Park)

	* Removed unnessesary lines which causes the gles resource leak and
	corruption.

2012-08-21  Sung W. Park (sung_)

        * Fix evas_gl current_context update issue when evas_gl context is deleted.

2012-08-23  Tom Hacohen (TAsn)

	* Textblock: Fixed bug with 1 char word separators at the start of the
	text when going to the start of the word (e.g: "=test").

2012-08-26  Jiyoun Park(jypark)

	* Jpeg loader: fix orientation didn't work if jpeg file format is JFIF.
	Add code deal with JFIF file format.

2012-08-27  Tom Hacohen (TAsn)

	* Textblock: Make sure scale changes causes a complete recalc.

2012-08-29  Christopher Michael (devilhorns)

	* Wayland Egl Engine: Add support for Multi-Sample Anti-Aliasing and GL Direct Images.
                              Add support for using native image binding.
                              Add support for setting GL surface capabilities.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Christophe Sadoine

       * Added a function: evas_map_util_quat_rotate().